// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list of components components in a node in a t-foreach  1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].item;
    return block1([d1]);
  }
}"
`;

exports[`list of components components in a node in a t-foreach  2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><ul><owl-child-0/></ul></div>\`);
  let block3 = createBlock(\`<li><owl-child-0/></li>\`);
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k2, v2, l2, c2] = prepareList(ctx['items']);
    for (let i1 = 0; i1 < l2; i1++) {
      ctx[\`item\`] = v2[i1];
      let key1 = 'li_'+ctx['item'];
      let b4 = component(\`Child\`, {item: ctx['item']}, key + \`__1__\${key1}\`, node, ctx);
      c2[i1] = withKey(block3([], [b4]), key1);
    }
    let b2 = list(c2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components reconciliation alg works for t-foreach in t-foreach 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].blip;
    return block1([d1]);
  }
}"
`;

exports[`list of components reconciliation alg works for t-foreach in t-foreach 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k2, v2, l2, c2] = prepareList(ctx['state'].s);
    for (let i1 = 0; i1 < l2; i1++) {
      ctx[\`section\`] = v2[i1];
      ctx[\`section_index\`] = i1;
      let key1 = ctx['section_index'];
      ctx = Object.create(ctx);
      const [k3, v3, l3, c3] = prepareList(ctx['section'].blips);
      for (let i2 = 0; i2 < l3; i2++) {
        ctx[\`blip\`] = v3[i2];
        ctx[\`blip_index\`] = i2;
        let key2 = ctx['blip_index'];
        c3[i2] = withKey(component(\`Child\`, {blip: ctx['blip']}, key + \`__1__\${key1}__\${key2}\`, node, ctx), key2);
      }
      ctx = ctx.__proto__;
      c2[i1] = withKey(list(c3), key1);
    }
    let b2 = list(c2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components reconciliation alg works for t-foreach in t-foreach, 2 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-text-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].row+'_'+ctx['props'].col;
    return block1([d1]);
  }
}"
`;

exports[`list of components reconciliation alg works for t-foreach in t-foreach, 2 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/></div>\`);
  let block3 = createBlock(\`<p><owl-child-0/></p>\`);
  let block5 = createBlock(\`<p><owl-child-0/></p>\`);
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k2, v2, l2, c2] = prepareList(ctx['state'].rows);
    for (let i1 = 0; i1 < l2; i1++) {
      ctx[\`row\`] = v2[i1];
      let key1 = ctx['row'];
      ctx = Object.create(ctx);
      const [k4, v4, l4, c4] = prepareList(ctx['state'].cols);
      for (let i2 = 0; i2 < l4; i2++) {
        ctx[\`col\`] = v4[i2];
        let key2 = ctx['col'];
        let b6 = component(\`Child\`, {row: ctx['row'],col: ctx['col']}, key + \`__1__\${key1}__\${key2}\`, node, ctx);
        c4[i2] = withKey(block5([], [b6]), key2);
      }
      ctx = ctx.__proto__;
      let b4 = list(c4);
      c2[i1] = withKey(block3([], [b4]), key1);
    }
    let b2 = list(c2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components simple list 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<span><owl-text-0/></span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].value;
    return block1([d1]);
  }
}"
`;

exports[`list of components simple list 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k1, v1, l1, c1] = prepareList(ctx['state'].elems);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`elem\`] = v1[i1];
      let key1 = ctx['elem'].id;
      c1[i1] = withKey(component(\`Child\`, {value: ctx['elem'].value}, key + \`__1__\${key1}\`, node, ctx), key1);
    }
    return list(c1);
  }
}"
`;

exports[`list of components sub components rendered in a loop 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<p><owl-text-0/></p>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['props'].n;
    return block1([d1]);
  }
}"
`;

exports[`list of components sub components rendered in a loop 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k2, v2, l2, c2] = prepareList(ctx['state'].numbers);
    for (let i1 = 0; i1 < l2; i1++) {
      ctx[\`number\`] = v2[i1];
      let key1 = ctx['number'];
      c2[i1] = withKey(component(\`Child\`, {n: ctx['number']}, key + \`__1__\${key1}\`, node, ctx), key1);
    }
    let b2 = list(c2);
    return block1([], [b2]);
  }
}"
`;

exports[`list of components sub components with some state rendered in a loop 1`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<p><owl-text-0/></p>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let d1 = ctx['state'].n;
    return block1([d1]);
  }
}"
`;

exports[`list of components sub components with some state rendered in a loop 2`] = `
"function anonymous(bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, component } = bdom;
  let { withDefault, getTemplate, prepareList, withKey, zero, call, callSlot, capture } = helpers;
  
  let block1 = createBlock(\`<div><owl-child-0/></div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    ctx = Object.create(ctx);
    const [k2, v2, l2, c2] = prepareList(ctx['state'].numbers);
    for (let i1 = 0; i1 < l2; i1++) {
      ctx[\`number\`] = v2[i1];
      let key1 = ctx['number'];
      c2[i1] = withKey(component(\`Child\`, {}, key + \`__1__\${key1}\`, node, ctx), key1);
    }
    let b2 = list(c2);
    return block1([], [b2]);
  }
}"
`;
